{
  "search": {
    "placeholder": "What are you craving?",
    "suggestions": {
      "seeLocations": "See locations",
      "seeLocationsOf": "See locations of {name}",
      "recentSearches": "Recent searches",
      "recentlyViewed": "Recently viewed",
      "viewMore": "View more",
...
